--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         }
     },
     "scripts": {
-        "post-package-install": [
+        "post-autoload-dump": [
             "@php artisan accept:install"
         ]
     }
